syntax = "proto3";
//////////////////////////////////////////////////////////
// BRIX Testbed Alarm Values transfer  V1.0.0                                                   
//                                                                       
// Â© by iASYS Technologies., 2020                                                 
//                                                                       
// Protobuf structures for the TestBed Channel Values transfer  interface.                                          
//                                                                       
//////////////////////////////////////////////////////////

package bean;

option java_package = "com.brix.testbed.monitor.protobuf";
option java_outer_classname = "TestBedAlarmProto";

message TestBedAlarm {
	string name = 1;
	string hostName=2;
	repeated Alarm alarms=3;
}

message Alarm {
	string name = 1;
	double doubleValue = 2;
	string strValue = 3;
	int32 dataType = 4;  
	string unit = 5;
    int32  alarmValue = 6;
	int32  alarmAckflag= 7;
	int32 seqNo = 8;
	string displayFormat = 9;
	string lowerAlarm = 10;
	string lowerWarning = 11;
	string upperAlarm = 12;
	string upperWarning = 13;
}







